--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "d"
    ]
   },
   {
